--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>lion-all</artifactId>
         <groupId>com.dianping.lion</groupId>
-        <version>0.4.2-SNAPSHOT</version>
+        <version>0.4.2</version>
     </parent>
 
     <artifactId>lion-api</artifactId>
@@ -23,6 +23,11 @@
         <dependency>
              <groupId>com.dianping.cat</groupId>
              <artifactId>cat-client</artifactId>   
+        </dependency>
+        <dependency>
+            <groupId>org.unidal.framework</groupId>
+            <artifactId>foundation-service</artifactId>
+            <version>2.0.11</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
