--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.4.2-SNAPSHOT</version>
+		<version>0.4.2</version>
 	</parent>
 
 	<artifactId>lion-client</artifactId>
