--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>lion-all</artifactId>
         <groupId>com.dianping.lion</groupId>
-        <version>0.4.2</version>
+        <version>0.4.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>lion-api</artifactId>
