--- a/lion-service/pom.xml
+++ b/lion-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.4.2</version>
+		<version>0.4.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>lion-service</artifactId>
@@ -28,6 +28,11 @@
     </build>
 
 	<dependencies>
+        <dependency>
+            <groupId>org.unidal.framework</groupId>
+            <artifactId>foundation-service</artifactId>
+            <version>2.0.11</version>
+        </dependency>
 		<dependency>
 			<groupId>com.dianping.lion</groupId>
 			<artifactId>lion-client</artifactId>
