--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>lion-all</artifactId>
         <groupId>com.dianping.lion</groupId>
-        <version>0.4.3</version>
+        <version>0.4.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>lion-console</artifactId>
