--- a/lion-service/pom.xml
+++ b/lion-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.4.5</version>
+		<version>0.4.6-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>lion-service</artifactId>
