--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.4.7</version>
+		<version>0.4.8-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>lion-client</artifactId>
@@ -31,6 +31,12 @@
             <artifactId>jodd-bean</artifactId>
             <version>3.4.9</version>
         </dependency>
+        <dependency>
+             <groupId>com.dianping.cat</groupId>
+             <artifactId>cat-client</artifactId>   
+             <version>1.2.2</version>
+             <scope>provided</scope>
+         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
