--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     
     <groupId>com.dianping.lion</groupId>
     <artifactId>lion-all</artifactId>
-    <version>0.4.7</version>
+    <version>0.4.8-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>lion-all</name>
