--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <env>dev</env>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <dependencies>
