--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.4.8</version>
+		<version>0.4.8.1</version>
 	</parent>
 
 	<artifactId>lion-client</artifactId>
@@ -17,6 +17,10 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
         </dependency>
 		<dependency>
             <groupId>org.apache.zookeeper</groupId>
