--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.4.9-SNAPSHOT</version>
+		<version>0.4.9</version>
 	</parent>
 
 	<artifactId>lion-client</artifactId>
@@ -21,10 +21,6 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-        </dependency>
-		<dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
         </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -51,7 +47,6 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <scope>test</scope>
         </dependency>
 	</dependencies>
 </project>
